# snapi

./: LICENSE  README.md  Taskfile.yml
.github/workflows/: build-and-test.yml
containers/pip-tools/: Dockerfile
containers/snapi-app/: Dockerfile
containers/snapi-lib/: Dockerfile
examples/hello/spec/: hello.yml
examples/hello/templates/cpp/: code.cpp
examples/service_api/: Taskfile.yml  gen.py
examples/service_api/models/: cpp.py
examples/service_api/spec/: account.yml  database.yml
examples/service_api/templates/cpp/: module.h.jinja  service_impl.cpp.jinja  service_impl.h.jinja
examples/simple/: gen.py
examples/simple/templates/cpp/: code.h
examples/simple/templates/py/: code.py
pkg/: pyproject.toml  requirements-dev.txt  requirements.txt
pkg/snapi/: __init__.py  errors.py  generator.py  inputs.py  logging.py  naming.py  template.py
